// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-hMqMXs kTSoES"
  rows="4rem 20rem"
>
  <div
    className="sc-kEYyzF fPrFyG"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Header
    </div>
  </div>
  <div
    className="sc-kEYyzF eNNrIL"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-kEYyzF TMTgQ"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Body
    </div>
  </div>
</div>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-hMqMXs brSHep"
  rows="4rem 20rem"
>
  <div
    className="sc-kEYyzF fPrFyG"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Header
    </div>
  </div>
  <div
    className="sc-kEYyzF eNNrIL"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-kEYyzF TMTgQ"
  >
    <div
      className="sc-kkGfuU fCgFyc"
    >
      Body
    </div>
  </div>
</div>
`;
